deploymentservice.yaml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "em-crm-msa-jenkins-ns-frontend"
  namespace: "jenkins-ns"
  labels:
    app: "em-crm-msa-jenkins-ns-frontend"
spec:
  selector:
    matchLabels:
      app: "em-crm-msa-jenkins-ns-frontend"
  template:
    metadata:
      labels:
        app: "em-crm-msa-jenkins-ns-frontend"
    spec:
      containers:
      - name: "em-crm-msa-jenkins-ns-frontend"
        image: "arvindkumar300430/dockerpipeline:5"
        resources:
          limits:
            cpu: 200m
            memory: 400Mi
          requests:
            cpu: 200m
            memory: 400Mi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: em-crm-msa-jenkins-ns-frontend
  name: em-crm-msa-jenkins-ns-frontend
  namespace: jenkins-ns
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-cors: "true"
    networking.gke.io/v1beta1.FrontendConfig: my-frontend-config
    nginx.ingress.kubernetes.io/cors-allow-headers: DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization,token,xsrf-token,Client,Client-Id,accessToken    
    nginx.ingress.kubernetes.io/cors-allow-method: PUT, GET, POST, OPTIONS, DELETE
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://jenkins-nsgcp.extramarks.com, https://jenkins-nsgcp-teach.extramarks.com, https://www.extramarks.com, https://teach.extramarks.com, https://prejenkins-ns-teach.extramarks.com, https://prejenkins-ns.extramarks.com, https://gotoschool.extramarks.com, https://elevate.extramarks.com/, https://exmprenewnemr.extramarks.com, https://exmprenewnemrteacher.extramarks.com, https://app.extramarks.com, https://crm.extramarks.com, https://api-crm.ext [...]
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"     
spec:
  defaultBackend:       
    service:
      name: em-crm-msa-jenkins-ns-frontend-service
      port:
        number: 3000  
  
 # ingressClassName: public
  rules:
  - host: em-crm.extramarks.com
  - http:
      paths:
      - backend:
          service:
            name: em-crm-msa-jenkins-ns-frontend-service
            port:
              number: 3000
        path: /
        pathType: Prefix
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "em-crm-msa-jenkins-ns-frontend-service"
  namespace: "jenkins-ns"
  labels:
    app: "em-crm-msa-jenkins-ns-frontend"
spec:
  ports:
  - protocol: "TCP"
    port: 3000
    targetPort: 3000
  selector:
    app: "em-crm-msa-jenkins-ns-frontend"
  type: "LoadBalancer"
  loadBalancerIP: ""
