ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: em-crm-msa-jenkins-ns-frontend
  name: em-crm-msa-jenkins-ns-frontend
  namespace: jenkins-ns
  annotations:
          #    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.class: ingress-nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization,token,xsrf-token,Client,Client-Id,accessToken    
    nginx.ingress.kubernetes.io/cors-allow-method: PUT, GET, POST, OPTIONS, DELETE
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://prodgcp.extramarks.com, https://prodgcp-teach.extramarks.com, https://www.extramarks.com, https://teach.extramarks.com, https://preprod-teach.extramarks.com, https://preprod.extramarks.com, https://gotoschool.extramarks.com, https://elevate.extramarks.com/, https://exmprenewnemr.extramarks.com, https://exmprenewnemrteacher.extramarks.com, https://app.extramarks.com, https://crm.extramarks.com, https://api-crm.extramarks.com"
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"     
spec:
  defaultBackend:       
    service:
      name: em-crm-msa-jenkins-ns-frontend-service
      port:
        number: 3000  
spec:
  tls:
  - hosts:
    - demo.markstest.com
    secretName: hello-kubernetes-tls
 # ingressClassName: public
  rules:
  - host: demo.markstest.com
  - http:
      paths:
      - backend:
          service:
            name: em-crm-msa-jenkins-ns-frontend-service
            port:
              number: 3000
        path: /
        pathType: Prefix
